@@ -1,1 +1,19 @@
 # FSVisualizer
+![basic](https://user-images.githubusercontent.com/56323360/150610401-3f74231a-695a-4042-8f76-0a4c6212d694.png)
+
+------Instruction to run FSVisualizer------
+1. pull all the files on an updated Java version greater than 11.0 and open the Eclipse.
+2. Access the FSApplication.java file in the src/view folder and run as conmfiguration
+3. set up the run configuration by adding " --module-path "YOUR\PATH\lib" --add-modules javafx.controls,javafx.fxml "
+4. Run and enjoy FSVisualizer
+
+------Detailed components------
+![browse](https://user-images.githubusercontent.com/56323360/150610650-7f2a9531-6cca-4690-88b4-c57669c376cb.png)
+1. Browse
+- click on this browse button to open up the folder that you want from your own computer
+![searchbar](https://user-images.githubusercontent.com/56323360/150610677-68931e0a-7435-4a18-9873-1aab8b6aa577.png)
+2. SearchBar
+- you can copy and paste the folder path to open up the folder on the FSVisualizer and search items in the folder.
+![Screenshot 2022-01-21 175406](https://user-images.githubusercontent.com/56323360/150610724-874d8084-0020-4345-bca3-bfca8f1be625.png)
+3. Favorites
+- You can add/delete favorite by right clicking the folder on the screen.
